--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "sort-packages": true
     },
     "extra": {
-        "zf": {
+        "laminas": {
             "config-provider": [
                 "Jnjxp\\Filed\\ConfigProvider"
             ]
@@ -22,6 +22,7 @@
     "require": {
         "fig/http-message-util": "^1.1",
         "lmc/http-constants": "^1.0",
+        "micheh/psr7-cache": "^0.5.0",
         "psr/container": "^1.0",
         "psr/http-factory": "^1.0",
         "psr/http-message": "^1.0",
@@ -30,7 +31,7 @@
     "require-dev": {
         "pds/skeleton": "~1.0",
         "phpunit/phpunit": "^8.0",
-        "zendframework/zend-diactoros": "^2.1"
+        "laminas/laminas-diactoros": "^2.1"
     },
     "autoload": {
         "psr-4": {
